--- a/GitHub/AppShell.xaml
+++ b/GitHub/AppShell.xaml
@@ -14,6 +14,11 @@
         Route="VideojuegosPage"
         Icon="gamepad.png" />
 
+    <ShellContent
+        Title="Música"
+        Route="Musica"
+        ContentTemplate="{DataTemplate local:Musica}" />
+
     <!-- TabBar opcional para futuras vistas -->
     <TabBar>
         <!--<Tab Title="Películas" Icon="film.png">
