--- a/GitHub/AppShell.xaml
+++ b/GitHub/AppShell.xaml
@@ -9,6 +9,12 @@
 
     <!-- Pantalla inicial: Videojuegos -->
     <ShellContent
+        Title="Cine"
+        ContentTemplate="{DataTemplate local:CinePage}"
+        Route="CinePage"
+        Icon="cine.jpg" />
+    
+    <ShellContent
         Title="Videojuegos"
         ContentTemplate="{DataTemplate local:VideojuegosPage}"
         Route="VideojuegosPage"
@@ -18,6 +24,13 @@
         Title="Música"
         Route="Musica"
         ContentTemplate="{DataTemplate local:Musica}" />
+
+    <!-- Pantalla inicial: Cine -->
+    <ShellContent
+        Title="Cine"
+        ContentTemplate="{DataTemplate local:CinePage}"
+        Route="CinePage"
+        Icon="cine.jpg" />
 
     <!-- TabBar opcional para futuras vistas -->
     <TabBar>
